--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,3 @@
-# This workflow will build a MuleSoft project and deploy to CloudHub
 name: Build and Deploy to IMV Cloudhub
 on:
   push :
@@ -7,17 +6,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/cache@v4
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: Set up JDK 11
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 11
+        java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml -DskipMunitTests
     - name: Stamp artifact file name with commit hash
@@ -27,7 +26,7 @@ jobs:
         artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
         mv $artifactName1 $artifactName2
     - name: Upload artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@master
       with:
           name: artifacts
           path: target/*.jar
@@ -35,14 +34,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:    
-    - uses: actions/checkout@v4
-    - uses: actions/cache@v4
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - uses: actions/download-artifact@v4
+    - uses: actions/download-artifact@master
       with:
         name: artifacts
     - name: Deploy to Sandbox
@@ -51,7 +50,7 @@ jobs:
         PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
       run: |
         artifactName=$(ls *.jar | head -1)
-        mvn -X deploy -DmuleDeploy \
+        mvn deploy -DmuleDeploy \
          -Dmule.artifact="$artifactName" \
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD" \
