--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -105,24 +105,12 @@ jobs:
         PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
 
       run: |
-
         cd hello-world-cicd
-
-        echo "Current directory: $(pwd)"
-
-        ls -l target/
-
-        artifactName=$(ls hello-world-cicd/target/*.jar | head -1)
-
-        echo "Deploying artifact: $artifactName"
-
-        mvn -X deploy -DmuleDeploy \
-
-         -Dmule.artifact="$artifactName" \
-
+        
+        artifactName=$(ls *.jar | head -1)
+        
+        mvn deploy -DmuleDeploy \
+         -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
-
          -Danypoint.password="$PASSWORD" \
-
          -DskipTests
- 
